@@ -24,7 +24,6 @@ D/telnetd////
 D/wrapup////
 D/zlib////
 /.cvsignore/1.5/Mon Nov 24 09:57:09 2003//
-/ChangeLog/1.2345/Wed Jun  2 13:27:11 2010//
 /ChangeLog-pre2007/1.1/Fri May 11 14:05:59 2007//
 /Doxyfile.in/1.3/Fri May 15 12:52:11 2009//
 /Makefile.am/1.94/Sat Feb 20 21:09:24 2010//
@@ -32,3 +31,4 @@ D/zlib////
 /acinclude.m4/1.6/Mon Jun 30 13:36:20 2008//
 /configure.ac/1.181/Wed Jun  2 13:22:04 2010//
 /preinstall.am/1.44/Sun Apr 18 22:30:53 2010//
+/ChangeLog/1.2346/Thu Jun  3 16:01:03 2010//
