@@ -1,3 +1,8 @@
+2010-06-03	Chris Johns <chrisj@rtems.org>
+
+	* sapi/include/confdefs.h: PR 1543. Make default file system when
+	nothing is defined IMFS not miniIMFS.
+
 2010-06-01 	Chris Johns <chrisj@rtems.org>
 
 	* libcsupport/include/rtems/libio.h: Make the struct name the same
